# f1-reels

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  render.yml
api/: jobs.py  main.py  schemas.py
f1reels/: cli.py  colors.py  config.py  themes.py
f1reels/data/: session.py  telemetry.py
f1reels/pipeline/: __init__.py  data.py  models.py
f1reels/render/: base.py
f1reels/renderers/: __init__.py  base.py  matplotlib.py
f1reels/visualizations/: base.py  qualifying_map.py  registry.py
scripts/: compare_sources.py  inspect_telemetry.py  plot_laps_3d.py  position_pipeline.py
tests/: test_position_ordering.py  test_telemetry.py
