[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "f1reels"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
f1reels = "f1reels.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
